2012-02-26  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp (start-gnuplot): Set return value to
	(values)
	(start-gnuplot): Implemented call to gnuplot via
	external-program:run.  Tested on clisp only

2012-02-25  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp (*executable*): Added wgnuplot path
	(*terminal*): Changed feature tests to be based on platforms, not
	my individual machines
	(eval-when (...)): cleaned-up DISPLAY initialization 
	(command): cleaned-up accumulated crud
	(gnuplot-command): args is now a &rest, and we use apply instead
	of funcall

2011-10-05  Mirko Vukovic  <Mirko Vukovic <mirko.vukovic@us.tel.com>>

	* package.lisp (#:gnuplot-interface): Updated documentation

	* gnuplot-interface.lisp: I replaced the symbol macros for the
	utility functions by function calls
