@@ -1,3 +1,10 @@
+2012-02-27  Mirko Vukovic  <mirko.vukovic@us.tel.com>
+
+	* gnuplot-interface.lisp (stop): Added as alias to stop-gnuplot
+
+	* gnuplot-interface-package-def.lisp (#:gnuplot-interface): Added
+	:start and :stop as exported symbols
+
 2012-02-26  Mirko Vukovic  <mirko.vukovic@us.tel.com>
 
 	* gnuplot-interface.lisp (start-gnuplot): Set return value to
